--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix import for Plone 5.2 and fix id and login to correct values
+  [enfold-josh]
 
 
 1.3.0 (2019-10-25)
